<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/friends_list_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends_list"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accordion_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accordion_txt"
        android:textSize="12sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: 似たコードなのでLoopで回したい -->
    <androidx.cardview.widget.CardView
        android:id="@+id/friends_list_cardview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/friends_list_txt"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hamster"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="友だち"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/friends_list_cardview"
        app:layout_constraintTop_toBottomOf="@+id/friends_list_txt" />

    <TextView
        android:id="@+id/group_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_detail"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/friends_list_cardview"
        app:layout_constraintTop_toBottomOf="@id/group_name"/>

    <TextView
        android:id="@+id/unread_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unread_badge"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/friends_list_txt"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        app:layout_constraintTop_toBottomOf="@id/friends_list_txt"
        app:layout_constraintStart_toEndOf="@id/unread_badge"/>

</androidx.constraintlayout.widget.ConstraintLayout>