<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/hamster"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@id/short_self_introduction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/short_self_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_introduction"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bgm_button"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_txt"
        android:textSize="11sp"
        android:textColor="@color/black"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:drawableLeft="@drawable/baseline_music_note_24"
        android:drawablePadding="0dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/circular_image"
        app:layout_constraintTop_toBottomOf="@id/short_self_introduction"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/hamster"
        android:scaleType="centerCrop"
        android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>